--- a/task-management-frontend/src/styles/global.scss
+++ b/task-management-frontend/src/styles/global.scss
@@ -5,6 +5,7 @@
     text-align: center;
    
   }
+  
   .card {
     padding: 2em;
   }
@@ -17,13 +18,11 @@
   
     color-scheme: light dark;
     color: rgba(255, 255, 255, 0.87);
-    background-color: #242424;
-  
     font-synthesis: none;
     text-rendering: optimizeLegibility;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
-  }
+}
   
   a {
     font-weight: 500;
@@ -38,6 +37,7 @@
     margin: 0;
     display: flex;
     place-items: center;
+    background-color: rgb(245, 245, 245)!important;
     //min-width: 320px;
     //min-height: 100vh;
   }
